# ZKFFT_Halo2

./: Cargo.toml
src/: modified_wip.rs  optimized_wip.rs
